# EcoDrop-API

./: README.md  manage.py  package.json
EcoDrop/: asgi.py  settings.py  urls.py
backend/: db copy.sqlite3  db.sqlite3  requirements.py  requirements.txt
backend/EcoDrop/: settings.py  urls.py  wsgi.py
backend/Eco_tools_lib/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/Eco_tools_lib/src/: audio.py  gramatica.py  ia.py
backend/asistencia_inteligente/: apps.py  services.py  urls.py  views.py
backend/contabilidad/: admin.py  models.py  urls.py  views.py
backend/contabilidad/migrations/: 0001_initial.py  0002_alter_contabilidad_tipo_residuo.py  0002_remove_contabilidad_otros_and_more.py
backend/residuos/: admin.py  models.py  urls.py  views.py
backend/residuos/migrations/: 0001_initial.py  0002_alter_residuo_id.py
backend/users/: admin.py  models.py  views.py
backend/users/migrations/: 0001_initial.py  0002_residuo_contabilidad.py  0003_remove_contabilidad_tipo_residuo_and_more.py
backend/usuarios/: models.py  tests.py  urls.py  views.py
backend/usuarios/migrations/: 0001_initial.py  0002_alter_usuario_id.py  0003_alter_usuario_total_reciclado.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: index.js
frontend/src/hooks/: useAdministracion.js  useResiduos.js
frontend/src/layouts/: LayoutAdministracion.jsx  LayoutPrincipal.css  LayoutPrincipal.jsx  index.js
frontend/src/pages/: index.js
frontend/src/routes/: Contabilidad.jsx  (+2 more)
(+27 files in other folders)
